[workspace]
members = ["adb_cli", "adb_client", "pyadb_client"]
resolver = "2"

[workspace.package]
authors = ["tth0704"]
edition = "2021"
homepage = "https://github.com/tth0704/adb_client"
keywords = ["adb", "android", "tcp", "usb"]
license = "MIT"
repository = "https://github.com/tth0704/adb_client"
version = "2.1.7"

# To build locally when working on a new release
[patch.crates-io]
adb_client = { path = "./adb_client" }

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
opt-level = 'z'
strip = true
