[package]
authors = ["tth0704"]
description = "Rust ADB (Android Debug Bridge) client library"
keywords = ["adb", "android", "debug", "bridge"]
license = "MIT"
name = "adb_client"
edition = "2021" 
readme = "README.md"
repository = "https://github.com/tth0704/adb_client.git"
version = "2.1.7"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.5.0"
chrono = "0.4.39"
homedir = "0.3.4"
image = "0.25.5"
lazy_static = "1.5.0"
log = "0.4.22"
mdns-sd = "0.13.2"
num-bigint = { version = "0.8.4", package = "num-bigint-dig" }
num-traits = "0.2.19"
quick-protobuf = "0.8.1"
rand = "0.9.0"
rcgen = "0.13.1"
regex = { version = "1.11.1", features = ["perf", "std", "unicode"] }
rsa = "0.9.7"
rusb = { version = "0.9.4", features = ["vendored"] }
rustls = "0.23.22"
rustls-pki-types = "1.11.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_repr = "0.1.19"
sha1 = { version = "0.10.6", features = ["oid"] }
thiserror = "2.0.7"

[dev-dependencies]
anyhow = "1.0.93"
criterion = "0.5.1"  # Used for benchmarks

[[bench]]
harness = false
name = "benchmark_adb_push"
path = "./benches/benchmark_adb_push.rs"
